# deply-third-party-npm-plugin-solution

./: .dockerignore  .gitignore  404.html  Dockerfile  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/: CODEOWNERS
.github/workflows/: build.yml  docs.yml  on_dispatch.yml  on_push.yml  on_release.yml
docs/: index.md
docs/instructions/getting-started/: getting-started.md
docs/instructions/tasks/: task-1-write-a-npm-plugin.md  task-2-package-and-publish-your-plugin.md  task-3-scan-dependencies.md
instructions/getting-started/getting-started/: index.html
instructions/tasks/task-1-write-a-npm-plugin/: index.html
instructions/tasks/task-2-package-and-publish-your-plugin/: index.html
instructions/tasks/task-3-scan-dependencies/: index.html
search/: search_index.json
src/myplugin/: myplugin.py
src/npm/: __init__.py  npm.py
tests/: test_plugin.py
tests/fixtures/: package-lock.json
