[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/npm"]

[project]
name = "depsight-npm-plugin"
version = "0.1.0"
description = "A third-party plugin template for depsight"
requires-python = ">=3.12"
dependencies = [
    "depsight==1.3.0",
]

[project.entry-points."depsight.plugins"]
npm = "npm.npm:NpmPlugin"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "mypy>=1.0",
]
docs = [
    "mkdocs>=1.6,<2.0",
    "mkdocs-material>=9.5,<10.0",
    "mkdocs-mermaid2-plugin>=1.1",
    "pymdown-extensions>=10.0,<11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = ["depsight", "depsight.*", "depsight.core.*", "depsight.core.plugins.*"]
ignore_missing_imports = true
follow_imports = "skip"
